fix(search): fix chevron alignment

--- a/src/index.css
+++ b/src/index.css
@@ -74,9 +74,9 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .chevron::after {
   content: "\2303";
-  font-size: 20px;
-  position: absolute;
-  top: .4rem;
-  right: 1rem;
+  font-size: 19px;
+  position: absolute; 
+  top: .4rem; 
+  right: .8rem;
   transform: rotate(180deg)
 }
